web-infras/parser/tests/fixtures/babel/es2015/destructuring/binding-this/output.txt
[SyntaxError]: Unexpect keyword in property name. (1,7)
1|var { this } = {};
 |     ^
